downlaod button with each image is added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Gallery</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -24,46 +25,108 @@
 
     <section id="main-section">
         <h2>Featured Images</h2>
-    <div class="gallery">
-        <div class="image-container">
+        <div class="gallery">
+            <div class="image-container">
+                <img src="./images/img1.webp" alt="Image 1">
+                <a href="./images/img1.webp" download class="download-btn">
+                    <i class="fas fa-download"></i>
+                </a>
+            </div>
+            <div class="image-container">
+                <img src="./images/img2.webp" alt="Image 2">
+                <a href="./images/img2.webp" download class="download-btn">
+                    <i class="fas fa-download"></i>
+                </a>
+            </div>
+            <div class="image-container">
+                <img src="./images/img3.webp" alt="Image 3">
+                <a href="./images/img3.webp" download class="download-btn">
+                    <i class="fas fa-download"></i>
+                </a>
+            </div>
+            <div class="image-container">
+                <img src="./images/img4.webp" alt="Image 4">
+                <a href="./images/img4.webp" download class="download-btn">
+                    <i class="fas fa-download"></i>
+                </a>
+            </div>
+            <div class="image-container">
+                <img src="./images/img1.webp" alt="Image 5">
+                <a href="./images/img1.webp" download class="download-btn">
+                    <i class="fas fa-download"></i>
+                </a>
+            </div>
+        </div>
+    </section>
+    
+
+<section id="gallery-section">
+    <h2>All Images</h2>
+    <div class="image-gallery" id="uploaded-gallery">
+        <div class="image">
             <img src="./images/img1.webp" alt="Image 1">
+            <a href="./images/img1.webp" download class="download-btn">
+                <i class="fas fa-download"></i>
+            </a>
         </div>
-        <div class="image-container">
+        <div class="image">
             <img src="./images/img2.webp" alt="Image 2">
+            <a href="./images/img2.webp" download class="download-btn">
+                <i class="fas fa-download"></i>
+            </a>
         </div>
-        <div class="image-container">
+        <div class="image">
             <img src="./images/img3.webp" alt="Image 3">
+            <a href="./images/img3.webp" download class="download-btn">
+                <i class="fas fa-download"></i>
+            </a>
         </div>
-        <div class="image-container">
+        <div class="image">
             <img src="./images/img4.webp" alt="Image 4">
+            <a href="./images/img4.webp" download class="download-btn">
+                <i class="fas fa-download"></i>
+            </a>
         </div>
-        <div class="image-container">
+        <div class="image">
             <img src="./images/img1.webp" alt="Image 5">
+            <a href="./images/img1.webp" download class="download-btn">
+                <i class="fas fa-download"></i>
+            </a>
+        </div>
+        <div class="image">
+            <img src="./images/img1.webp" alt="Image 1">
+            <a href="./images/img1.webp" download class="download-btn">
+                <i class="fas fa-download"></i>
+            </a>
+        </div>
+        <div class="image">
+            <img src="./images/img2.webp" alt="Image 2">
+            <a href="./images/img2.webp" download class="download-btn">
+                <i class="fas fa-download"></i>
+            </a>
+        </div>
+        <div class="image">
+            <img src="./images/img3.webp" alt="Image 3">
+            <a href="./images/img3.webp" download class="download-btn">
+                <i class="fas fa-download"></i>
+            </a>
+        </div>
+        <div class="image">
+            <img src="./images/img4.webp" alt="Image 4">
+            <a href="./images/img4.webp" download class="download-btn">
+                <i class="fas fa-download"></i>
+            </a>
+        </div>
+        <div class="image">
+            <img src="./images/img1.webp" alt="Image 5">
+            <a href="./images/img1.webp" download class="download-btn">
+                <i class="fas fa-download"></i>
+            </a>
         </div>
     </div>
 </section>
 
- <!-- Image upload section -->
- <section id="upload-section">
-    <input type="file" id="file-input" multiple accept="image/*">
-</section>
 
-
-    <section id="gallery-section">
-        <h2>All Images</h2>
-        <div class="image-gallery" id="uploaded-gallery">
-            <img src="./images/img1.webp" alt="">
-            <img src="./images/img2.webp" alt="">
-            <img src="./images/img3.webp" alt="">
-            <img src="./images/img4.webp" alt="">
-            <img src="./images/img1.webp" alt="">
-            <img src="./images/img1.webp" alt="">
-            <img src="./images/img2.webp" alt="">
-            <img src="./images/img3.webp" alt="">
-            <img src="./images/img4.webp" alt="">
-            <img src="./images/img1.webp" alt="">
-        </div>
-    </section>
 
     <script src="./script.js"></script>
 </body>
